
v1.0.3-static
------
- Static linking of libraries
- Minor fixes with changing tabs to spaces in PDE generation

v1.0.4
------
- Dosing Pump Repeat Interval internal memory values get set on Internal Memory page
	- Cannot change values currently (defaults to 60m)
	- Have to manually edit PDE file to use the Dosing Pump Repeat Interval
- Enabled features are now added to the PDE file comments for dev libraries
- PC Logging removed, logging data to the Client is not pushed, now it's always pulled
- Fixed bug with Reset->Logging not resetting the Web Banner value
- Added WifiAuthentication dialog box and PDE addition
- Add in DosingPumpIntervalSetup to Features page
	- When enabling, it overrides the standard dosing pump.  So all one needs to do is to enable it and then choose Dosing Pump and you are set.
- Fixed error with enabling / disabling PDE controlled features.  They were not being disabled after being enabled when you remove a device/feature.

v1.1.0
------
- Updated copyright year
- Changed to new logo
- Added in new features
- WIFI features is now a default
- Ability to read in a Features file
- Restores values on startup (PDE & Features)
- Reads in Features file at startup
- Updated Find Controller code
- Internal Memory moved from a Tab to a separate window
- ShowInterface added to end of generated PDE file
- Updated icon
- Delayed On device added

v1.1.1
------
- Fixed bug with detecting "My Documents" folder
- Folder updating, force the following folders
	- Sketchbook - Documents\Arduino
	- Libraries - Documents\Arduino\libraries
	- Arduino (for the executable) - Program Files\Reef Angel Controller
	- If any of those folders do not exist, RAGen will automatically create them
- Updated PDE tab to be PDE / INO
- Added autodetection for library version (0.8.X or 0.9.X) to generate file appropriately
- Added updated extension based on library version (0.8.X used PDE & 0.9.X uses INO)